crates/pv-release/tests/snapshots/app_publication__stage_app_publication_rejects_helper_version_regression.snap
---
source: crates/pv-release/tests/app_publication.rs
expression: "command_failure(&output, fixture.root())"
---
CommandFailure {
    status_code: Some(
        1,
    ),
    stdout: "",
    stderr: "Error: failed to stage app publication\n\nCaused by:\n    invalid publication input `<tempdir>/candidate-records/pv-darwin-amd64.json`: candidate helper version `1.0.0` must not be older than current stable `1.1.0`\n",
}
