crates/pv-release/tests/snapshots/app_publication__stage_app_publication_rejects_non_canonical_app_object_key.snap
---
source: crates/pv-release/tests/app_publication.rs
expression: "command_failure(&output, fixture.root())"
---
CommandFailure {
    status_code: Some(
        1,
    ),
    stdout: "",
    stderr: "Error: failed to stage app publication\n\nCaused by:\n    invalid app release record `<tempdir>/candidate-records/not-the-darwin-arm64-binary.json`: object_key must be `pv/0.2.0/pv-darwin-arm64`\n",
}
