crates/pv-release/tests/snapshots/app_publication__stage_app_publication_rejects_non_newer_stable_manifest_candidate.snap
---
source: crates/pv-release/tests/app_publication.rs
expression: "command_failure(&output, fixture.root())"
---
CommandFailure {
    status_code: Some(
        1,
    ),
    stdout: "",
    stderr: "Error: failed to stage app publication\n\nCaused by:\n    invalid publication input `<tempdir>/candidate-records/pv-darwin-amd64.json`: candidate app version `0.2.0` must be newer than current stable `0.3.0`\n",
}
